--- a/DecodePolyline.csproj
+++ b/DecodePolyline.csproj
@@ -71,7 +71,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PolylineDecodePolylineNode.cs" />
+    <Compile Include="DecodePolylineNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
