--- a/DecodePolyline.csproj
+++ b/DecodePolyline.csproj
@@ -36,10 +36,10 @@
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
-    <OutputPath>.\</OutputPath>
+    <OutputPath>bin\AnyCPU\Release\</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|AnyCPU'">
-    <OutputPath>.\</OutputPath>
+    <OutputPath>bin\AnyCPU\Debug\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="SlimDX">
